--- a/templates/messaging/inbox.html
+++ b/templates/messaging/inbox.html
@@ -9,12 +9,13 @@
     <hr>
     <div class="list-group">
         {% for conversation in conversations %}
-            {% with other_user=conversation.get_other_user user %}
+            {# The syntax here is now corrected to user=user #}
+            {% with other_user=conversation.get_other_user user=user %}
                 <a href="{% url 'messaging:conversation_detail' pk=conversation.pk %}" class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
                             {% if other_user.profile.avatar %}
-                                <img src="{{ other_user.profile.avatar.url }}" class="rounded-circle" style="width: 50px; height: 50px; object-fit: cover; margin-right: 15px;">
+                                <img src="{{ participant.profile.display_avatar_url }}" class="rounded-circle" style="width: 50px; height: 50px; object-fit: cover; margin-right: 15px;">
                             {% else %}
                                 <img src="{% static 'images/default_avatar.svg' %}" class="rounded-circle" style="width: 50px; height: 50px; object-fit: cover; margin-right: 15px;">
                             {% endif %}
