--- a/templates/messaging/send_message.html
+++ b/templates/messaging/send_message.html
@@ -15,13 +15,14 @@
                         <p class="text-center text-muted">About: <a href="{{ listing.get_absolute_url }}">{{ listing.title }}</a></p>
                     {% endif %}
                     
-                    <form method="post">
+                   <form id="chat-form" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
-                        {{ form|crispy }}
-                        <div class="d-grid gap-2 mt-3">
-                            <button class="btn btn-primary" type="submit">Send Message</button>
+                        <div class="input-group">
+                            <input type="file" id="chat-image-input" name="image" class="form-control me-2" accept="image/*">
+                            <input type="text" id="chat-message-input" name="text" class="form-control" placeholder="Type a message...">
+                            <button class="btn btn-primary" id="chat-message-submit" type="submit">Send</button>
                         </div>
-                    </form>
+                 </form>
                 </div>
             </div>
         </div>
