--- a/templates/messaging/inbox.html
+++ b/templates/messaging/inbox.html
@@ -13,11 +13,16 @@
                 <a href="{% url 'messaging:conversation_detail' pk=conversation.pk %}" class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
-                            {% if other_user.profile.avatar %}
-                                <img src="{{ other_user.profile.avatar.url }}" alt="{{ other_user.username }}'s avatar" class="rounded-circle" style="width: 50px; height: 50px; object-fit: cover; margin-right: 15px;">
-                            {% else %}
-                                <img src="{% static 'images/default_avatar.svg' %}" alt="Default avatar" class="rounded-circle" style="width: 50px; height: 50px; object-fit: cover; margin-right: 15px;">
-                            {% endif %}
+                            {% if other_user.profile.avatar and other_user.profile.avatar.url %}
+    <img src="{{ other_user.profile.avatar.url }}"
+         alt="{{ other_user.username }}'s avatar"
+         class="rounded-circle" style="width:50px;height:50px;object-fit:cover;margin-right:15px;">
+{% else %}
+    <img src="{% static 'images/default_avatar.svg' %}"
+         alt="Default avatar"
+         class="rounded-circle" style="width:50px;height:50px;object-fit:cover;margin-right:15px;">
+{% endif %}
+
                             <div>
                                 <h5 class="mb-1">{{ other_user.username }}</h5>
                                 <p class="mb-1 text-muted">
