--- a/static/css/main.css
+++ b/static/css/main.css
@@ -81,6 +81,7 @@ body {
 .listing-card {
     border: none;
     transition: box-shadow .2s ease-in-out;
+    width: max-content;
 }
 
 .listing-card:hover {
