--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -81,6 +81,7 @@ body {
 .listing-card {
     border: none;
     transition: box-shadow .2s ease-in-out;
+    width: max-content;
 }
 
 .listing-card:hover {
@@ -136,6 +137,12 @@ body {
 }
 
 .profile-avatar, .avatar-lg {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.profile-avatar-main {
     width: 150px;
     height: 150px;
     object-fit: cover;
