--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -2,14 +2,9 @@
 
 /* Listing Card */
 .listing-card {
-    background-color: var(--white-color);
-    border-radius: 2px;
-    box-shadow: var(--shadow);
-    transition: transform 0.1s linear;
-    text-decoration: none;
-    color: inherit;
-    display: block;
-    border: 1px solid transparent;
+    border: 1px solid #e0e0e0;
+    border-radius: 10%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 .listing-card:hover {
@@ -20,7 +15,9 @@
 .listing-card-image-container {
     position: relative;
     width: 100%;
-    padding-top: 100%; /* 1:1 Aspect Ratio */
+    padding-top: 100%;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;/* 1:1 Aspect Ratio */
 }
 
 .listing-card-image {
@@ -30,6 +27,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-top-left-radius: 15%;
+    border-top-right-radius: 15%
 }
 
 .listing-card-body {
